refactor(components): updated previews

--- a/CurrencyApp/Resources/Localizable.xcstrings
+++ b/CurrencyApp/Resources/Localizable.xcstrings
@@ -1,6 +1,12 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "Add Item" : {
+
+    },
+    "Item at %@" : {
+
+    },
     "List is empty." : {
       "extractionState" : "manual",
       "localizations" : {
@@ -22,6 +28,9 @@
           }
         }
       }
+    },
+    "Select an item" : {
+
     }
   },
   "version" : "1.0"
