feat(screens): implemented history page

--- a/CurrencyApp/Resources/Localizable.xcstrings
+++ b/CurrencyApp/Resources/Localizable.xcstrings
@@ -23,6 +23,17 @@
         }
       }
     },
+    "Exchange History" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Austauschhistorie"
+          }
+        }
+      }
+    },
     "List is empty." : {
       "extractionState" : "manual",
       "localizations" : {
